<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.github.ksszidane</groupId>
  <artifactId>Appium-unit-lib</artifactId>
  <version>1.0.20</version>
  <packaging>jar</packaging>
  
  <name>Appium-unit-lib</name>
  <description>App UI Automation AppiumDriver Library</description>
  <url>https://github.com/ksszidane/Appium-unit-lib</url>

  
  <licenses> 
  	<license> 
    	<name>The Apache Software License, Version 2.0</name> 
      	<url>https://opensource.org/licenses/Apache-2.0</url> 
        <distribution>repo</distribution> 
   	</license> 
  </licenses> 
  

  <developers> 
  	<developer> 
  		<name>Kei_Es</name> 
  		<email>ksszidane@naver.com</email> 
	</developer> 
  </developers>
  
  <scm> 
	  <url>https://github.com/ksszidane/Appium-unit-lib</url> 
  </scm> 
  

  <distributionManagement> 
  	
  	
  	
  </distributionManagement>

	<repositories>
	<!--
 	<repository> 
 		<id>Appium-unit-lib</id> 
 		<url>https://api.bintray.com/maven/ksszidane/utils/Appium-unit-lib/;publish=1</url> 
 	</repository> 
 	 
	<repository>
		<id>Appium-unit-lib</id>
		<url>https://raw.github.com/ksszidane/Appium-unit-lib/mvn-repo</url>
		<snapshots>
        	<enabled>true</enabled>
       		<updatePolicy>always</updatePolicy>
    	</snapshots>
	</repository>
 	-->
 	
 	<repository>
 		<id>internal.repo</id>
 		<name>Temporary Staging Repository</name>
 		<url>file://${project.build.directory}/mvn-repo</url>
	</repository>


	</repositories>




    <properties>
    	<java.version>1.8</java.version>
    	
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <maven.compile.encoding>UTF-8</maven.compile.encoding>
        
     
        <bintray.repo>ksszidane/utils</bintray.repo> 
        <bintray.package>Appium-unit-lib</bintray.package>
	
		
        <!-- Logging --> 
        <logback.version>1.2.3</logback.version> 
        <slf4j.version>1.7.25</slf4j.version> 
        
        <!-- Test --> 
        <junit.version>4.12</junit.version> 
        
        <powermock.version>1.6.4</powermock.version>
        <log4j.version>2.5</log4j.version>

  		<github.global.server>github</github.global.server>
  		<github.maven-plugin>0.12</github.maven-plugin>

  </properties>
  
  
  <dependencies>
	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>7.4.0</version>
	</dependency>
	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-java</artifactId>
		<version>3.14.0</version>
	</dependency>
	
	<dependency>
    	<groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-chrome-driver</artifactId>
    	<version>3.141.59</version>
	</dependency>
	
	<dependency>
    	<groupId>com.aventstack</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>3.0.6</version>
	</dependency>
	<dependency>
    	<groupId>com.relevantcodes</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>2.41.2</version>
	</dependency>
	<dependency>
    	<groupId>com.vimalselvam</groupId>
    	<artifactId>testng-extentsreport</artifactId>
    	<version>1.3.1</version>
	</dependency>
	<dependency>
		<groupId>org.uncommons</groupId>
		<artifactId>reportng</artifactId>
		<version>1.1.4</version>
		<!--   <scope>test</scope>  -->
		<exclusions>
			<exclusion>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	
	<dependency>
		<groupId>com.google.inject</groupId>
		<artifactId>guice</artifactId>
		<version>3.0</version>
		<!-- <scope>provided</scope> -->
	</dependency>
	
	<dependency>
    	<groupId>org.apache.maven.plugins</groupId>
    	<artifactId>maven-resources-plugin</artifactId>
    	<version>2.6</version>
    </dependency>
    
    <dependency>
  		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-site-plugin</artifactId>
		<version>3.9.1</version>
		<type>maven-plugin</type>
	</dependency>
    
    <dependency>
    	<groupId>io.appium</groupId>
    	<artifactId>java-client</artifactId>
    	<version>7.5.1</version>
	</dependency>
	
	<dependency>
		<groupId>com.squareup.okhttp3</groupId>
		<artifactId>okhttp</artifactId>
		<version>4.2.2</version>
	</dependency>
	
	<dependency>
		<groupId>com.googlecode.json-simple</groupId>
		<artifactId>json-simple</artifactId>
		<version>1.1</version>
  	</dependency>
  	
	<dependency>
		<groupId>org.eclipse.mylyn.github</groupId>
		<artifactId>org.eclipse.egit.github.core</artifactId>
		<version>2.0.3</version>
	</dependency>
	
	

	
  </dependencies>
  
  
 <build>
	<plugins>
		<plugin>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.0.0-M5</version>
			<configuration>
				<encoding>UTF-8</encoding>
				<outputEncoding>UTF-8</outputEncoding>
				<argLine> -Xms1024m -Xmx2048m -XX:MaxPermSize=256m
					-Dfile.encoding=UTF-8</argLine>
			</configuration>
		</plugin>

		<!-- <plugin> <artifactId>maven-compiler-plugin</artifactId> <version>3.5.1</version> 
			<configuration> <encoding>UTF-8</encoding> <source>1.8</source> <target>1.8</target> 
			</configuration> </plugin> -->


		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.8.1</version>
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
				<encoding>UTF-8</encoding>
				<outputEncoding>UTF-8</outputEncoding>
			</configuration>
		</plugin>
		<plugin> 
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId> 
			<version>3.2.0</version> 
			<configuration>
            	<encoding>UTF-8</encoding>
            	<outputEncoding>UTF-8</outputEncoding>
            </configuration>
		</plugin>
		
		<plugin> 
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-site-plugin</artifactId> 
			<version>3.9.1</version> 
			<configuration>
            	<encoding>UTF-8</encoding>
            	<outputEncoding>UTF-8</outputEncoding>
            </configuration>
		</plugin>
		
		<plugin>
        	<artifactId>maven-deploy-plugin</artifactId>
        	<version>2.8.2</version>
        	<configuration>
               <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
        	</configuration>
    	</plugin>
		
		<!--
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-source-plugin</artifactId>
			<version>2.3</version>
			<configuration>
            	<encoding>UTF-8</encoding>
            	<outputEncoding>UTF-8</outputEncoding>
            </configuration>
			<executions> 
				<execution> 
				<id>attach-sources</id> 
				<phase>verify</phase> 
				<goals> 
					<goal>jar</goal> 
				</goals> 
			</execution> 
		</executions>
		</plugin>
		-->
		<!--
		<plugin> 
			<groupId>org.apache.maven.plugins</groupId> 
			<artifactId>maven-javadoc-plugin</artifactId> 
			<version>2.9.1</version> 
			<configuration>
            	<additionalparam>-Xdoclint:none</additionalparam>
            	<encoding>UTF-8</encoding>
            	<outputEncoding>UTF-8</outputEncoding>
            </configuration>
			<executions> 
				<execution> 
					<id>attach-javadocs</id> 
					<phase>verify</phase> 
					<goals> 
						<goal>jar</goal> 
					</goals> 
				</execution> 
			</executions> 
		</plugin>
		-->
		<!--
		<plugin> 
			<groupId>org.apache.maven.plugins</groupId> 
			<artifactId>maven-gpg-plugin</artifactId> 
			<version>1.5</version> 
			<configuration>
            	<encoding>UTF-8</encoding>
            	<outputEncoding>UTF-8</outputEncoding>
            </configuration>
			<executions> 
				<execution> 
					<id>sign-artifacts</id> 
					<phase>verify</phase> 
					<goals> 
						<goal>sign</goal> 
					</goals> 
				</execution> 
			</executions> 
		</plugin>
		-->
		
		<plugin>
      		<groupId>com.github.github</groupId>
      		<artifactId>site-maven-plugin</artifactId>
      		<version>0.12</version>
      		<configuration>
        		<message>Creating site for ${project.version}</message>
        		<noJekyll>true</noJekyll>
        		<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
				<branch>refs/heads/mvn-repo</branch>
				<includes>
					<include>**/*</include>
				</includes>
				<repositoryName>Appium-unit-lib</repositoryName>
				<repositoryOwner>ksszidane</repositoryOwner>
				<merge>true</merge>
      		</configuration>
      		<executions>
        		<execution>
          			<goals>
            			<goal>site</goal>
          			</goals>
          			<phase>site</phase>
        		</execution>
      		</executions>
   		</plugin>


	</plugins>
</build>
  
  
</project>